@@ -46,6 +46,7 @@ import io.camunda.zeebe.protocol.record.value.ErrorType;
 import io.camunda.zeebe.protocol.record.value.HistoryDeletionRecordValue;
 import io.camunda.zeebe.protocol.record.value.HistoryDeletionType;
 import io.camunda.zeebe.protocol.record.value.NestedRecordValue;
+import io.camunda.zeebe.protocol.record.value.ResourceType;
 import io.camunda.zeebe.protocol.record.value.deployment.ProcessMetadataValue;
 import io.camunda.zeebe.test.util.BrokerClassRuleHelper;
 import io.camunda.zeebe.test.util.record.RecordingExporter;
@@ -54,6 +55,7 @@ import java.time.Duration;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
+import org.assertj.core.api.Assertions;
 import org.assertj.core.api.InstanceOfAssertFactories;
 import org.junit.Before;
 import org.junit.Rule;
@@ -63,7 +65,7 @@ import org.mockito.Mockito;
 /**
  * Verifies that no new process instances can be created for a process definition that is in the
  * {@link io.camunda.zeebe.engine.state.deployment.PersistedProcess.PersistedProcessState#DRAINING}
- * state.
+ * state, and that a draining definition is finalized once its last instance completes.
  */
 public class DrainingProcessDefinitionTest {
 
@@ -94,10 +96,11 @@ public class DrainingProcessDefinitionTest {
 
   @Test
   public void shouldRejectCreateInstanceByProcessIdWhenDraining() {
-    // given
+    // given - a definition kept draining by a still-running instance
     final var processId = helper.getBpmnProcessId();
-    final var metadata = deploy(processId);
-    drain(metadata);
+    final var metadata = deployWithJob(processId);
+    awaitJobCreated(engine.processInstance().ofBpmnProcessId(processId).create());
+    drainViaDeletion(metadata.getProcessDefinitionKey());
 
     // when
     engine.processInstance().ofBpmnProcessId(processId).expectRejection().create();
@@ -114,10 +117,11 @@ public class DrainingProcessDefinitionTest {
 
   @Test
   public void shouldRejectCreateInstanceByVersionWhenDraining() {
-    // given
+    // given - a definition kept draining by a still-running instance
     final var processId = helper.getBpmnProcessId();
-    final var metadata = deploy(processId);
-    drain(metadata);
+    final var metadata = deployWithJob(processId);
+    awaitJobCreated(engine.processInstance().ofBpmnProcessId(processId).create());
+    drainViaDeletion(metadata.getProcessDefinitionKey());
 
     // when
     engine.processInstance().ofBpmnProcessId(processId).withVersion(1).expectRejection().create();
@@ -134,10 +138,11 @@ public class DrainingProcessDefinitionTest {
 
   @Test
   public void shouldRejectCreateInstanceWithResultWhenDraining() {
-    // given
+    // given - a definition kept draining by a still-running instance
     final var processId = helper.getBpmnProcessId();
-    final var metadata = deploy(processId);
-    drain(metadata);
+    final var metadata = deployWithJob(processId);
+    awaitJobCreated(engine.processInstance().ofBpmnProcessId(processId).create());
+    drainViaDeletion(metadata.getProcessDefinitionKey());
 
     // when
     engine.processInstance().ofBpmnProcessId(processId).withResult().asyncCreate();
@@ -157,10 +162,11 @@ public class DrainingProcessDefinitionTest {
 
   @Test
   public void shouldRejectCreateInstanceWithStartInstructionsWhenDraining() {
-    // given
+    // given - a definition kept draining by a still-running instance
     final var processId = helper.getBpmnProcessId();
-    final var metadata = deploy(processId);
-    drain(metadata);
+    final var metadata = deployWithJob(processId);
+    awaitJobCreated(engine.processInstance().ofBpmnProcessId(processId).create());
+    drainViaDeletion(metadata.getProcessDefinitionKey());
 
     // when - bogus element id: proves the draining guard runs before start-instruction validation
     engine
@@ -182,10 +188,11 @@ public class DrainingProcessDefinitionTest {
 
   @Test
   public void shouldRaiseIncidentWhenCallActivityCallsDrainingProcessWithLatestBinding() {
-    // given
+    // given - a child definition kept draining by a still-running child instance
     final var childId = helper.getBpmnProcessId() + "-child";
     final var parentId = helper.getBpmnProcessId() + "-parent";
-    final var child = deploy(childId);
+    final var child = deployWithJob(childId);
+    awaitJobCreated(engine.processInstance().ofBpmnProcessId(childId).create());
     engine
         .deployment()
         .withXmlResource(
@@ -197,7 +204,7 @@ public class DrainingProcessDefinitionTest {
                 .endEvent()
                 .done())
         .deploy();
-    drain(child);
+    drainViaDeletion(child.getProcessDefinitionKey());
 
     // when
     final long parentInstanceKey = engine.processInstance().ofBpmnProcessId(parentId).create();
@@ -208,15 +215,19 @@ public class DrainingProcessDefinitionTest {
 
   @Test
   public void shouldRaiseIncidentWhenCallActivityCallsDrainingProcessWithDeploymentBinding() {
-    // given
+    // given - deployment binding resolves the called process within the same deployment
     final var childId = helper.getBpmnProcessId() + "-child";
     final var parentId = helper.getBpmnProcessId() + "-parent";
-    // deployment binding resolves the called process within the same deployment
     final var deployment =
         engine
             .deployment()
             .withXmlResource(
-                "child.bpmn", Bpmn.createExecutableProcess(childId).startEvent().endEvent().done())
+                "child.bpmn",
+                Bpmn.createExecutableProcess(childId)
+                    .startEvent()
+                    .serviceTask("task", t -> t.zeebeJobType(JOB_TYPE))
+                    .endEvent()
+                    .done())
             .withXmlResource(
                 "parent.bpmn",
                 Bpmn.createExecutableProcess(parentId)
@@ -233,7 +244,9 @@ public class DrainingProcessDefinitionTest {
             .filter(p -> p.getBpmnProcessId().equals(childId))
             .findFirst()
             .orElseThrow();
-    drain(child);
+    // a running child instance keeps the child definition draining rather than fully deleted
+    awaitJobCreated(engine.processInstance().ofBpmnProcessId(childId).create());
+    drainViaDeletion(child.getProcessDefinitionKey());
 
     // when
     final long parentInstanceKey = engine.processInstance().ofBpmnProcessId(parentId).create();
@@ -254,12 +267,13 @@ public class DrainingProcessDefinitionTest {
                 Bpmn.createExecutableProcess(childId)
                     .versionTag("v1")
                     .startEvent()
+                    .serviceTask("task", t -> t.zeebeJobType(JOB_TYPE))
                     .endEvent()
                     .done())
             .deploy()
             .getValue()
             .getProcessesMetadata()
-            .get(0);
+            .getFirst();
     engine
         .deployment()
         .withXmlResource(
@@ -274,7 +288,9 @@ public class DrainingProcessDefinitionTest {
                 .endEvent()
                 .done())
         .deploy();
-    drain(child);
+    // a running child instance keeps the child definition draining rather than fully deleted
+    awaitJobCreated(engine.processInstance().ofBpmnProcessId(childId).create());
+    drainViaDeletion(child.getProcessDefinitionKey());
 
     // when
     final long parentInstanceKey = engine.processInstance().ofBpmnProcessId(parentId).create();
@@ -309,12 +325,19 @@ public class DrainingProcessDefinitionTest {
         .deploy();
     final var target = deploy(targetId, "B");
 
+    // a running target instance keeps the target definition draining rather than fully deleted
+    final long targetKeeperKey = engine.processInstance().ofBpmnProcessId(targetId).create();
+    RecordingExporter.processInstanceRecords(ProcessInstanceIntent.ELEMENT_ACTIVATED)
+        .withProcessInstanceKey(targetKeeperKey)
+        .withElementType(BpmnElementType.USER_TASK)
+        .await();
+
     final long processInstanceKey = engine.processInstance().ofBpmnProcessId(sourceId).create();
     RecordingExporter.processInstanceRecords(ProcessInstanceIntent.ELEMENT_ACTIVATED)
         .withProcessInstanceKey(processInstanceKey)
         .withElementType(BpmnElementType.USER_TASK)
         .await();
-    drain(target);
+    drainViaDeletion(target.getProcessDefinitionKey());
     final long targetProcessDefinitionKey = target.getProcessDefinitionKey();
 
     // when
@@ -341,7 +364,7 @@ public class DrainingProcessDefinitionTest {
     // given - a repeating timer start event so the trigger also reschedules
     final var processId = helper.getBpmnProcessId();
     final var metadata = deployWithStartEvent(processId, start -> start.timerWithCycle("R2/PT1S"));
-    drain(metadata);
+    injectDraining(metadata);
 
     // when - the timer start event fires
     engine.increaseTime(Duration.ofHours(1));
@@ -363,7 +386,7 @@ public class DrainingProcessDefinitionTest {
     // given
     final var processId = helper.getBpmnProcessId();
     final var metadata = deployWithStartEvent(processId, start -> start.message("start-message"));
-    drain(metadata);
+    injectDraining(metadata);
 
     // when - a message is published against the (still-subscribed) message start event
     engine.message().withName("start-message").withCorrelationKey("key").publish();
@@ -386,7 +409,7 @@ public class DrainingProcessDefinitionTest {
     // given
     final var processId = helper.getBpmnProcessId();
     final var metadata = deployWithStartEvent(processId, start -> start.signal("start-signal"));
-    drain(metadata);
+    injectDraining(metadata);
 
     // when - a signal is broadcast to the (still-subscribed) signal start event
     engine.signal().withSignalName("start-signal").broadcast();
@@ -404,7 +427,7 @@ public class DrainingProcessDefinitionTest {
     final var processId = helper.getBpmnProcessId();
     final var metadata =
         deployWithStartEvent(processId, start -> start.condition(c -> c.condition("=x > y")));
-    drain(metadata);
+    injectDraining(metadata);
 
     // when - the conditional start event's condition is evaluated to true
     engine.conditionalEvaluation().withVariables(Map.of("x", 100, "y", 1)).evaluate();
@@ -429,7 +452,7 @@ public class DrainingProcessDefinitionTest {
         .deploy()
         .getValue()
         .getProcessesMetadata()
-        .get(0);
+        .getFirst();
   }
 
   private void assertNoInstanceSpawned(final long processDefinitionKey) {
@@ -451,8 +474,8 @@ public class DrainingProcessDefinitionTest {
     // instance, mimicking a follow-up command that outlived the DRAINING mark. This bypasses the
     // EventHandle guard to exercise the defensive ProcessInstanceStateTransitionGuard directly.
     final var processId = helper.getBpmnProcessId();
-    final var metadata = deploy(processId);
-    drain(metadata);
+    final var metadata = deploy(processId, null);
+    injectDraining(metadata);
 
     final long processInstanceKey = 123L;
     final var record =
@@ -493,23 +516,14 @@ public class DrainingProcessDefinitionTest {
     final var metadata = deployWithJob(processId);
     final long processInstanceKey = engine.processInstance().ofBpmnProcessId(processId).create();
     awaitJobCreated(processInstanceKey);
-    drain(metadata);
+    drainViaDeletion(metadata.getProcessDefinitionKey());
 
     // when - the last active instance completes
     engine.job().ofInstance(processInstanceKey).withType(JOB_TYPE).complete();
 
-    // then - this partition physically removes the definition locally (DELETING/DELETED) and then
-    // reports it has finished draining (DELETE_COMPLETE) so ProcessDeleteCompleteProcessor can
-    // aggregate the per-partition reports cluster-wide.
+    // then - the definition is removed locally (DELETED) and this partition reports drained
     assertDeletedLocally(metadata.getProcessDefinitionKey());
-    assertThat(
-            RecordingExporter.processRecords()
-                .withRecordType(RecordType.COMMAND)
-                .withIntent(ProcessIntent.DELETE_COMPLETE)
-                .withProcessDefinitionKey(metadata.getProcessDefinitionKey())
-                .exists())
-        .describedAs("this partition reports drained once its last instance completes")
-        .isTrue();
+    assertReportedDrained(metadata.getProcessDefinitionKey());
   }
 
   @Test
@@ -519,7 +533,7 @@ public class DrainingProcessDefinitionTest {
     final var metadata = deployWithJob(processId);
     final long processInstanceKey = engine.processInstance().ofBpmnProcessId(processId).create();
     awaitJobCreated(processInstanceKey);
-    drain(metadata, true);
+    drainViaDeletion(metadata.getProcessDefinitionKey(), true);
 
     // when - the last active instance completes
     engine.job().ofInstance(processInstanceKey).withType(JOB_TYPE).complete();
@@ -544,7 +558,7 @@ public class DrainingProcessDefinitionTest {
     final var metadata = deployWithJob(processId);
     final long processInstanceKey = engine.processInstance().ofBpmnProcessId(processId).create();
     awaitJobCreated(processInstanceKey);
-    drain(metadata);
+    drainViaDeletion(metadata.getProcessDefinitionKey());
 
     // when - the last active instance completes
     engine.job().ofInstance(processInstanceKey).withType(JOB_TYPE).complete();
@@ -568,21 +582,14 @@ public class DrainingProcessDefinitionTest {
     final var metadata = deployWithJob(processId);
     final long processInstanceKey = engine.processInstance().ofBpmnProcessId(processId).create();
     awaitJobCreated(processInstanceKey);
-    drain(metadata);
+    drainViaDeletion(metadata.getProcessDefinitionKey());
 
     // when - the last active instance is terminated
     engine.processInstance().withInstanceKey(processInstanceKey).cancel();
 
     // then - the definition is removed locally and this partition reports drained
     assertDeletedLocally(metadata.getProcessDefinitionKey());
-    assertThat(
-            RecordingExporter.processRecords()
-                .withRecordType(RecordType.COMMAND)
-                .withIntent(ProcessIntent.DELETE_COMPLETE)
-                .withProcessDefinitionKey(metadata.getProcessDefinitionKey())
-                .exists())
-        .describedAs("this partition reports drained once its last instance terminates")
-        .isTrue();
+    assertReportedDrained(metadata.getProcessDefinitionKey());
   }
 
   @Test
@@ -594,13 +601,12 @@ public class DrainingProcessDefinitionTest {
     final long secondInstanceKey = engine.processInstance().ofBpmnProcessId(processId).create();
     awaitJobCreated(firstInstanceKey);
     awaitJobCreated(secondInstanceKey);
-    drain(metadata);
+    drainViaDeletion(metadata.getProcessDefinitionKey());
 
     // when - only the first instance completes
     engine.job().ofInstance(firstInstanceKey).withType(JOB_TYPE).complete();
 
-    // then - the definition is still draining, not yet reported drained (a new instance is still
-    // rejected, which proves it has not been reported drained)
+    // then - still draining: a new instance is still rejected, proving it is not yet drained
     engine.processInstance().ofBpmnProcessId(processId).expectRejection().create();
     final var rejection =
         RecordingExporter.processInstanceCreationRecords().onlyCommandRejections().getFirst();
@@ -610,14 +616,7 @@ public class DrainingProcessDefinitionTest {
     engine.job().ofInstance(secondInstanceKey).withType(JOB_TYPE).complete();
 
     // then - this partition reports drained only after the last instance completes
-    assertThat(
-            RecordingExporter.processRecords()
-                .withRecordType(RecordType.COMMAND)
-                .withIntent(ProcessIntent.DELETE_COMPLETE)
-                .withProcessDefinitionKey(metadata.getProcessDefinitionKey())
-                .exists())
-        .describedAs("this partition reports drained only after the last instance completes")
-        .isTrue();
+    assertReportedDrained(metadata.getProcessDefinitionKey());
   }
 
   @Test
@@ -644,35 +643,31 @@ public class DrainingProcessDefinitionTest {
             .getValue()
             .getProcessInstanceKey();
     awaitJobCreated(childInstanceKey);
-    drain(child);
+    drainViaDeletion(child.getProcessDefinitionKey());
 
     // when - the child instance completes
     engine.job().ofInstance(childInstanceKey).withType(JOB_TYPE).complete();
 
     // then - the draining child definition is reported drained (finalize fires for child processes
     // too)
-    assertThat(
-            RecordingExporter.processRecords()
-                .withRecordType(RecordType.COMMAND)
-                .withIntent(ProcessIntent.DELETE_COMPLETE)
-                .withProcessDefinitionKey(child.getProcessDefinitionKey())
-                .exists())
-        .describedAs(
-            "draining child definition is reported drained when its call-activity instance"
-                + " completes")
-        .isTrue();
+    assertReportedDrained(child.getProcessDefinitionKey());
   }
 
   @Test
-  public void shouldFullyDeleteWhenAllPartitionsReportDrained() {
-    // given - a draining definition whose per-partition drain reports are outstanding for three
-    // partitions
+  public void shouldFullyDeleteWhenLastInstanceDrains() {
+    // given - a draining definition on the deployment partition. On this single-partition harness
+    // ProcessDrainingApplier auto-seeds only the local partition (1) at delete time; partitions 2
+    // and 3 are injected to simulate the rest of a three-partition cluster.
     final var processId = helper.getBpmnProcessId();
-    final var metadata = deploy(processId);
-    drain(metadata);
+    final var metadata = deployWithJob(processId);
     final long processDefinitionKey = metadata.getProcessDefinitionKey();
+    final long processInstanceKey = engine.processInstance().ofBpmnProcessId(processId).create();
+    awaitJobCreated(processInstanceKey);
+    drainViaDeletion(processDefinitionKey);
+    seedPendingDeletions(processDefinitionKey, 2, 3);
 
-    seedPendingDeletions(processDefinitionKey, 1, 2, 3);
+    // when - the last active instance completes, finalizing locally and reporting drained
+    engine.job().ofInstance(processInstanceKey).withType(JOB_TYPE).complete();
 
     // when - each partition reports it has finished draining (as the deployment partition receives
     // them: a locally-keyed report for partition 1 and forwarded reports for partitions 2 and 3)
@@ -686,7 +681,7 @@ public class DrainingProcessDefinitionTest {
     assertThat(
             RecordingExporter.processRecords()
                 .withIntent(ProcessIntent.FULLY_DELETED)
-                .withProcessDefinitionKey(processDefinitionKey)
+                .withProcessDefinitionKey(metadata.getProcessDefinitionKey())
                 .limit(1)
                 .count())
         .describedAs("the definition is reported fully deleted exactly once")
@@ -702,11 +697,170 @@ public class DrainingProcessDefinitionTest {
   }
 
   @Test
+  public void shouldMintNewVersionWhenRedeployingIdenticalResourceWhileDraining() {
+    // given - a definition kept draining by a still-running instance.
+    final var processId = helper.getBpmnProcessId();
+    final var resource =
+        Bpmn.createExecutableProcess(processId)
+            .startEvent()
+            .serviceTask("task", t -> t.zeebeJobType(JOB_TYPE))
+            .endEvent()
+            .done();
+    final var v1 =
+        engine
+            .deployment()
+            .withXmlResource(resource)
+            .deploy()
+            .getValue()
+            .getProcessesMetadata()
+            .getFirst();
+    awaitJobCreated(engine.processInstance().ofBpmnProcessId(processId).create());
+    drainViaDeletion(v1.getProcessDefinitionKey());
+
+    // when - the identical resource is redeployed while v1 is still draining
+    final var redeployed =
+        engine
+            .deployment()
+            .withXmlResource(resource)
+            .deploy()
+            .getValue()
+            .getProcessesMetadata()
+            .getFirst();
+
+    // then - it is not deduplicated onto the draining v1 (which would make the redeploy vanish once
+    // the drain finalizes); a fresh version is minted with a new key
+    assertThat(redeployed.isDuplicate())
+        .describedAs("a draining definition must not be reused as a deployment duplicate")
+        .isFalse();
+    assertThat(redeployed.getVersion()).isEqualTo(2);
+    assertThat(redeployed.getProcessDefinitionKey()).isNotEqualTo(v1.getProcessDefinitionKey());
+    // and - the resource is byte-identical to v1
+    assertThat(redeployed.getChecksum())
+        .describedAs("the redeployed resource must be byte-identical to the draining v1")
+        .isEqualTo(v1.getChecksum());
+  }
+
+  @Test
+  public void shouldFinalizeIgnoringBannedInstances() {
+    // given - a draining definition with two active instances
+    final var processId = helper.getBpmnProcessId();
+    final var metadata = deployWithJob(processId);
+    final long bannedInstanceKey = engine.processInstance().ofBpmnProcessId(processId).create();
+    final long completingInstanceKey = engine.processInstance().ofBpmnProcessId(processId).create();
+    awaitJobCreated(bannedInstanceKey);
+    awaitJobCreated(completingInstanceKey);
+    drainViaDeletion(metadata.getProcessDefinitionKey());
+
+    // and - one instance is banned. A banned instance never completes/terminates and is excluded
+    // from the active-instance check, so it must not block finalization.
+    engine.banInstanceInNewTransaction(1, bannedInstanceKey);
+    RecordingExporter.errorRecords().withRecordKey(bannedInstanceKey).await();
+
+    // when - the other (non-banned) instance completes and triggers the finalize hook
+    engine.job().ofInstance(completingInstanceKey).withType(JOB_TYPE).complete();
+
+    // then - the definition is finalized even though a banned instance still references it
+    assertDeletedLocally(metadata.getProcessDefinitionKey());
+  }
+
+  @Test
+  public void shouldResubscribeStartEventsToLatestActiveVersionSkippingDraining() {
+    // given - three versions of the same message-start-event definition. Only the latest holds the
+    // start-event subscription, so on deletion it must be handed down.
+    final var processId = helper.getBpmnProcessId();
+    final long v1Key = deployWithMessageStartAndJob(processId, "task-v1").getProcessDefinitionKey();
+    final long v2Key = deployWithMessageStartAndJob(processId, "task-v2").getProcessDefinitionKey();
+    final long v3Key = deployWithMessageStartAndJob(processId, "task-v3").getProcessDefinitionKey();
+
+    // and - the middle version (v2) is kept DRAINING by a still-running instance, so it cannot take
+    // over the subscription
+    awaitJobCreated(engine.processInstance().ofBpmnProcessId(processId).withVersion(2).create());
+    drainViaDeletion(v2Key);
+
+    // when - the latest ACTIVE version (v3) is deleted
+    engine.resourceDeletion().withResourceKey(v3Key).delete();
+    RecordingExporter.processRecords()
+        .withIntent(ProcessIntent.DRAINING)
+        .withProcessDefinitionKey(v3Key)
+        .await();
+
+    // then - the subscription is handed to v1 (the latest ACTIVE version below v3)
+    engine.message().withName("start-message").withCorrelationKey("key").publish();
+    final var spawned =
+        RecordingExporter.processInstanceRecords(ProcessInstanceIntent.ELEMENT_ACTIVATING)
+            .withElementType(BpmnElementType.PROCESS)
+            .withBpmnProcessId(processId)
+            .filter(r -> r.getValue().getProcessDefinitionKey() != v2Key)
+            .getFirst();
+    Assertions.assertThat(spawned.getValue().getProcessDefinitionKey())
+        .describedAs("the message start subscription is handed to v1, skipping the DRAINING v2")
+        .isEqualTo(v1Key);
+  }
+
+  @Test
+  public void shouldNotResubscribeStartEventsWhenNoActiveVersionRemainsBelow() {
+    // given - two versions of the same message-start-event definition. Only the latest (v2) holds
+    // the start-event subscription.
+    final var processId = helper.getBpmnProcessId();
+    final long v1Key = deployWithMessageStartAndJob(processId, "task-v1").getProcessDefinitionKey();
+    final long v2Key = deployWithMessageStartAndJob(processId, "task-v2").getProcessDefinitionKey();
+
+    // and - v1 is kept DRAINING by a still-running instance, so it is not an ACTIVE fallback that
+    // could take over the subscription
+    awaitJobCreated(engine.processInstance().ofBpmnProcessId(processId).withVersion(1).create());
+    drainViaDeletion(v1Key);
+
+    // when - the latest ACTIVE version (v2) is deleted, leaving no ACTIVE version below it
+    engine.resourceDeletion().withResourceKey(v2Key).delete();
+    RecordingExporter.processRecords()
+        .withIntent(ProcessIntent.DELETED)
+        .withProcessDefinitionKey(v2Key)
+        .await();
+
+    // then - the subscription is handed to nobody (findLatestActiveVersionBelow returns null), so
+    // the start message correlates to no version: v1 is DRAINING and unsubscribed, v2 is gone
+    engine.message().withName("start-message").withCorrelationKey("key").publish();
+    assertThat(
+            RecordingExporter.<Boolean>expectNoMatchingRecords(
+                records ->
+                    RecordingExporter.messageStartEventSubscriptionRecords(
+                            MessageStartEventSubscriptionIntent.CORRELATED)
+                        .withBpmnProcessId(processId)
+                        .exists()))
+        .describedAs("the start message correlates to no version - none holds the subscription")
+        .isFalse();
+  }
+
+  // A none start event (so instances can be created via the API to keep a version DRAINING) plus a
+  // message start event (so resubscription is observable by publishing a message). Both branches
+  // wait on a job so created instances stay running.
+  private ProcessMetadataValue deployWithMessageStartAndJob(
+      final String processId, final String taskId) {
+    return engine
+        .deployment()
+        .withXmlResource(
+            Bpmn.createExecutableProcess(processId)
+                .startEvent("none-start")
+                .serviceTask(taskId, t -> t.zeebeJobType(JOB_TYPE))
+                .endEvent()
+                .moveToProcess(processId)
+                .startEvent("message-start")
+                .message("start-message")
+                .serviceTask(taskId + "-msg", t -> t.zeebeJobType(JOB_TYPE))
+                .endEvent()
+                .done())
+        .deploy()
+        .getValue()
+        .getProcessesMetadata()
+        .getFirst();
+  }
+
+  @Test
   public void shouldDeleteHistoryWhenAllPartitionsReportDrained() {
     // given - a draining definition whose deletion also requested its history to be deleted
     final var processId = helper.getBpmnProcessId();
     final var metadata = deploy(processId);
-    drain(metadata, true);
+    injectDraining(metadata, true);
     final long processDefinitionKey = metadata.getProcessDefinitionKey();
     seedPendingDeletions(processDefinitionKey, 1, 2, 3);
 
@@ -747,7 +901,7 @@ public class DrainingProcessDefinitionTest {
     // given - a draining definition whose deletion did not request history deletion
     final var processId = helper.getBpmnProcessId();
     final var metadata = deploy(processId);
-    drain(metadata);
+    injectDraining(metadata);
     final long processDefinitionKey = metadata.getProcessDefinitionKey();
     seedPendingDeletions(processDefinitionKey, 1, 2, 3);
 
@@ -775,7 +929,7 @@ public class DrainingProcessDefinitionTest {
     // given - a draining definition that has already drained cluster-wide
     final var processId = helper.getBpmnProcessId();
     final var metadata = deploy(processId);
-    drain(metadata, true);
+    injectDraining(metadata, true);
     final long processDefinitionKey = metadata.getProcessDefinitionKey();
     seedPendingDeletions(processDefinitionKey, 1, 2);
 
@@ -802,6 +956,103 @@ public class DrainingProcessDefinitionTest {
                 .count())
         .describedAs("the history of the definition's instances is deleted exactly once")
         .isEqualTo(1);
+  }
+
+  @Test
+  public void shouldRejectRepeatedDeletionWhileDrainingWithoutDeletingActiveInstance() {
+    // given - a definition kept DRAINING by a still-running instance, deleted with history deletion
+    // requested (the only path that would otherwise create a batch operation)
+    final var processId = helper.getBpmnProcessId();
+    final var metadata = deployWithJob(processId);
+    final long processDefinitionKey = metadata.getProcessDefinitionKey();
+    final long processInstanceKey = engine.processInstance().ofBpmnProcessId(processId).create();
+    awaitJobCreated(processInstanceKey);
+    engine
+        .resourceDeletion()
+        .withResourceKey(processDefinitionKey)
+        .withDeleteHistory(true)
+        .delete();
+    RecordingExporter.processRecords()
+        .withIntent(ProcessIntent.DRAINING)
+        .withProcessDefinitionKey(processDefinitionKey)
+        .await();
+
+    // when - called repeatedly while draining, carrying PROCESS_DEFINITION as the service layer
+    // resolves it for a history deletion in production
+    for (int i = 0; i < 3; i++) {
+      final var rejection =
+          engine
+              .resourceDeletion()
+              .withResourceKey(processDefinitionKey)
+              .withResourceId(processId)
+              .withDeleteHistory(true)
+              .expectRejection()
+              .delete();
+
+      // then - rejected as already-being-deleted (not accepted with a fresh batch): the definition
+      // is still draining, so the caller is told to wait rather than getting a misleading not-found
+      assertThat(rejection)
+          .hasRejectionType(RejectionType.INVALID_STATE)
+          .hasRejectionReason(
+              "Expected to delete process definition with key `%d`, but it is already being deleted."
+                  .formatted(processDefinitionKey));
+    }
+
+    // then - no history-deletion batch operation was ever spawned by the repeated calls
+    Assertions.assertThat(
+            RecordingExporter.<Boolean>expectNoMatchingRecords(
+                records ->
+                    RecordingExporter.batchOperationCreationRecords()
+                        .withIntent(BatchOperationIntent.CREATE)
+                        .exists()))
+        .describedAs("a repeated deletion while draining must not spawn a batch operation")
+        .isFalse();
+
+    // and - the still-running instance was not terminated by the repeated deletions
+    Assertions.assertThat(
+            RecordingExporter.<Boolean>expectNoMatchingRecords(
+                records ->
+                    RecordingExporter.processInstanceRecords(
+                            ProcessInstanceIntent.ELEMENT_TERMINATED)
+                        .withProcessInstanceKey(processInstanceKey)
+                        .withElementType(BpmnElementType.PROCESS)
+                        .exists()))
+        .describedAs("an active instance must never be deleted prematurely by a repeated deletion")
+        .isFalse();
+
+    // and - the definition is not deleted while an instance is still running: it stays draining
+    Assertions.assertThat(
+            RecordingExporter.<Boolean>expectNoMatchingRecords(
+                records ->
+                    RecordingExporter.processRecords()
+                        .withIntent(ProcessIntent.DELETED)
+                        .withProcessDefinitionKey(processDefinitionKey)
+                        .exists()))
+        .describedAs("the definition must stay draining, not be deleted, while an instance runs")
+        .isFalse();
+  }
+
+  @Test
+  public void shouldPopulateResourceMetadataOnRejectedDeleteWhileDrainingWithoutExplicitType() {
+    // given - a definition kept DRAINING by a still-running instance
+    final var processId = helper.getBpmnProcessId();
+    final var metadata = deployWithJob(processId);
+    final long processDefinitionKey = metadata.getProcessDefinitionKey();
+    engine.processInstance().ofBpmnProcessId(processId).create();
+    engine.resourceDeletion().withResourceKey(processDefinitionKey).delete();
+    RecordingExporter.processRecords()
+        .withIntent(ProcessIntent.DRAINING)
+        .withProcessDefinitionKey(processDefinitionKey)
+        .await();
+
+    // when - the repeated delete carries only the resource key, as the default client path does
+    final var rejection =
+        engine.resourceDeletion().withResourceKey(processDefinitionKey).expectRejection().delete();
+
+    // then - the processor stamps the resolved metadata onto the rejection
+    assertThat(rejection.getRejectionType()).isEqualTo(RejectionType.INVALID_STATE);
+    assertThat(rejection.getValue().getResourceType()).isEqualTo(ResourceType.PROCESS_DEFINITION);
+    assertThat(rejection.getValue().getResourceId()).isEqualTo(processId);
   }
 
   private RecordToWrite drainReport(
@@ -856,6 +1107,17 @@ public class DrainingProcessDefinitionTest {
         .isTrue();
   }
 
+  private void assertReportedDrained(final long processDefinitionKey) {
+    Assertions.assertThat(
+            RecordingExporter.processRecords()
+                .withRecordType(RecordType.COMMAND)
+                .withIntent(ProcessIntent.DELETE_COMPLETE)
+                .withProcessDefinitionKey(processDefinitionKey)
+                .exists())
+        .describedAs("this partition reports drained (DELETE_COMPLETE) once its last instance ends")
+        .isTrue();
+  }
+
   private void awaitJobCreated(final long processInstanceKey) {
     RecordingExporter.jobRecords(JobIntent.CREATED)
         .withProcessInstanceKey(processInstanceKey)
@@ -875,7 +1137,7 @@ public class DrainingProcessDefinitionTest {
         .deploy()
         .getValue()
         .getProcessesMetadata()
-        .get(0);
+        .getFirst();
   }
 
   private ProcessMetadataValue deploy(final String processId) {
@@ -893,21 +1155,48 @@ public class DrainingProcessDefinitionTest {
         .deploy()
         .getValue()
         .getProcessesMetadata()
-        .get(0);
+        .getFirst();
   }
 
   /**
-   * Puts the given process definition into the {@code DRAINING} state. Since no processor writes
-   * the {@code DRAINING} event yet, the event is injected onto the log while the engine is stopped
-   * so it is applied to state on the next start (replay), rather than being ignored during live
-   * processing. TODO(#56978): drive draining via a real {@code RESOURCE_DELETION.DELETE} once that
-   * change lands, and remove this injection helper.
+   * Deletes the given definition and waits until it is marked {@code DRAINING}. Requires at least
+   * one active instance, otherwise the deletion finalizes right away instead of draining.
    */
-  private void drain(final ProcessMetadataValue metadata) {
-    drain(metadata, false);
+  private void drainViaDeletion(final long processDefinitionKey) {
+    drainViaDeletion(processDefinitionKey, false);
   }
 
-  private void drain(final ProcessMetadataValue metadata, final boolean deleteHistory) {
+  private void drainViaDeletion(final long processDefinitionKey, final boolean deleteHistory) {
+    engine
+        .resourceDeletion()
+        .withResourceKey(processDefinitionKey)
+        .withDeleteHistory(deleteHistory)
+        .delete();
+    RecordingExporter.processRecords()
+        .withIntent(ProcessIntent.DRAINING)
+        .withProcessDefinitionKey(processDefinitionKey)
+        .await();
+  }
+
+  /**
+   * Injects a {@code DRAINING} event directly (applied on the next start via replay), bypassing the
+   * deletion processor. Prefer {@link #drainViaDeletion(long)} — this helper is only for states a
+   * real deletion cannot reach on this harness:
+   *
+   * <ul>
+   *   <li>start-event race tests, which need a scheduled start event on an already-draining
+   *       definition — real deletion unsubscribes start events as it drains;
+   *   <li>tests with no active instance to keep the definition draining (e.g. the defensive {@code
+   *       ACTIVATE_ELEMENT} guard), where a real deletion would finalize immediately;
+   *   <li>deployment-partition aggregation tests that pair injection with {@link
+   *       #seedPendingDeletions} to simulate a multi-partition cluster on this single partition.
+   * </ul>
+   */
+  private void injectDraining(final ProcessMetadataValue metadata) {
+    injectDraining(metadata, false);
+  }
+
+  private void injectDraining(final ProcessMetadataValue metadata, final boolean deleteHistory) {
     engine.stop();
     engine.writeRecords(
         RecordToWrite.event()
